--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -14045,6 +14045,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "3b34aa43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot Divide by Zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example 1: Handling a specific exception : zero division error\n",
+    "\n",
+    "try:\n",
+    "    x=10/0\n",
+    "except ZeroDivisionError:\n",
+    "    print('Cannot Divide by Zero')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "94a7e8e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value does not valid..!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: Handling multiple exceptions\n",
+    "\n",
+    "try:\n",
+    "    x=int(\"DIGVIJAY\")\n",
+    "except ValueError:\n",
+    "    print('Value does not valid..!')\n",
+    "except TypeError:\n",
+    "    print('Value Type does not match..!')\n",
+    "except ZeroDivisionError:\n",
+    "    print('Can not divide by zero')\n",
+    "except Exception as e:\n",
+    "    print(f'other exception need to handle {e}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "992fc752",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3: Using the else block\n",
+    "\n",
+    "try:\n",
+    "    # Some code that may raise an exception\n",
+    "    x = 10 / 2\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Cannot divide by zero!\")\n",
+    "else:\n",
+    "    # Execute if no exception is raised\n",
+    "    print(f\"Result: {x}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "42d672a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can not divide by zero\n",
+      "This will always run\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 4: Using the finally block\n",
+    "\n",
+    "try:\n",
+    "    x=10/0\n",
+    "except ZeroDivisionError:\n",
+    "    print('Can not divide by zero')\n",
+    "finally:\n",
+    "    print('This will always run')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a97e9671",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter The Age :baahags\n",
+      "ERROR :invalid literal for int() with base 10: 'baahags'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 5: Raising an exception\n",
+    "\n",
+    "try:\n",
+    "    age=int(input('Enter The Age :'))\n",
+    "    if age<=0:\n",
+    "        print(\"Age can not be zero..!\")\n",
+    "        \n",
+    "except ValueError as ve:\n",
+    "    print(F'ERROR :{ve}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 97,
    "id": "a5b51468",
    "metadata": {},
@@ -14296,6 +14429,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "cf2aba41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Number is CORRECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=1\n",
+    "\n",
+    "if x<0:\n",
+    "    raise Exception('Sorry, no number below zero')\n",
+    "else:\n",
+    "    print('Entered Number is CORRECT')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 94,
    "id": "84f06d12",
    "metadata": {},
@@ -14304,6 +14460,51 @@
     "x = \"Hello\"\n",
     "# if not type(x) is int:\n",
     "#     raise TypeError('Only integers are allowed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2cc22c16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Type is CORRECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "if not type(x) is int:\n",
+    "    raise TypeError('Only intergers are allowed')\n",
+    "else:\n",
+    "    print('Entered Type is CORRECT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f586a222",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot Divide by Zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Example 1: Handling a specific exception : zero division error\n",
+    "\n",
+    "try:\n",
+    "    x=10/0\n",
+    "except ZeroDivisionError:\n",
+    "    print('Cannot Divide by Zero')"
    ]
   },
   {
@@ -14341,6 +14542,26 @@
     "fname=\"Abhimanyu\"\n",
     "lname='Mohite'\n",
     "print(\"Name is {} {}\".format(fname,lname))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "43244baa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The First Name : DIGVIJAY and Last Name : MOHITE\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname='DIGVIJAY'\n",
+    "lname='MOHITE'\n",
+    "print(f'The First Name : {fname} and Last Name : {lname}'.format(fname,lname))"
    ]
   },
   {
@@ -14478,7 +14699,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "The open() function: The open() function takes two parameters 1. filename 2. mode of opening a file.\n",
+    "The open() function: The open() function takes two parameters \n",
+    "  1. filename \n",
+    "  2. mode of opening a file.\n",
     "\n",
     "There are four different modes to open file:\n",
     "\n",
