--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -8004,40 +8004,693 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "04b0fde4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['r', 'r']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "txt = \"The python programming was developed in 1991 by Guido Van Rossom\"\n",
+    "\n",
+    "x = re.findall(\"r\",txt)\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "240061e6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(12, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = re.search(\"r\",txt)\n",
+    "print(x.span())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c41568d5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['r', 'r']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = re.findall(\"r\",txt)\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f34a7ca2",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'python', 'programming', 'was', 'developed', 'in', '1991', 'by', 'Guido', 'Van', 'Rossom']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = re.split(\" \",txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "06bc31f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The python p@og@amming was developed in 1991 by Guido Van Rossom\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = re.sub(\"r\",\"@\",txt)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a19cb460",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# error detected during the execution are called as exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b0d7efdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the Number to Check...:90\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        x=int(input('Enter the Number to Check...:'))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Enter The Valid Number to Check...!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "104c3597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIGVIJAY\n",
+      "Nothing went wrong.....!\n"
+     ]
+    }
+   ],
+   "source": [
+    "value=\"DIGVIJAY\"\n",
+    "try:\n",
+    "    print(value)\n",
+    "except NameError:\n",
+    "    print('Value Not Declared')\n",
+    "else:\n",
+    "    print('Nothing went wrong.....!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "1041e9c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO..!\n",
+      "1000000\n",
+      "Nothing went wrong\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000000\n",
+    "try:\n",
+    "    print('HELLO..!')\n",
+    "    print(a)\n",
+    "except:\n",
+    "    print('Something Went Wrong')\n",
+    "else:\n",
+    "    print('Nothing went wrong')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cf27d5dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "Nothing to went wrong in this code..!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    ls=[10,20,30,40]\n",
+    "    for i in range(0,4):\n",
+    "        print(ls[i])\n",
+    "except:\n",
+    "    print('Something Went Wrong..!')\n",
+    "else:\n",
+    "    print('Nothing to went wrong in this code..!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "69821862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found\n",
+      "TRY-ERROR block run, we are in finally block\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    f=open(\"sample.txt\")\n",
+    "except FileNotFoundError:\n",
+    "    print('File not found')\n",
+    "except FutureWarning:\n",
+    "    print(\"While writing the File we shound give extension for proper file format...!\")\n",
+    "finally:\n",
+    "    print(\"TRY-ERROR block run, we are in finally block\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "852b1964",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Number is CORRECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=1\n",
+    "\n",
+    "if x<0:\n",
+    "    raise Exception('Sorry, no number below zero')\n",
+    "else:\n",
+    "    print('Entered Number is CORRECT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2382d3ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entered Type is CORRECT\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10\n",
+    "if not type(x) is int:\n",
+    "    raise TypeError('Only intergers are allowed')\n",
+    "else:\n",
+    "    print('Entered Type is CORRECT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6804804f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found\n",
+      "Finally block executes always\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "   f = open(\"file.txt\")\n",
+    "   var = bad_var\n",
+    "except FileNotFoundError:\n",
+    "   print(\"File not found\")   \n",
+    "   \n",
+    "except Exception:\n",
+    "   print(\"Some other exception occurred\")\n",
+    " \n",
+    "finally:\n",
+    "   print(\"Finally block executes always\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c422d8d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value is 100.000\n",
+      "The value of P is 100.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "p=100\n",
+    "text=\"The value is {:.3f}\"\n",
+    "print(text.format(p))\n",
+    "\n",
+    "print('The value of P is {:.3f}'.format(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "64056098",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value is 100.000\n",
+      "The value of P is 100.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "p=100\n",
+    "text=\"The value is {:.3f}\"\n",
+    "print(text.format(p))\n",
+    "\n",
+    "print(\"The value of P is {:.3f}\".format(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9ea3c19c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value is 3.142\n",
+      "The value of P is 3.142\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 3.14159\n",
+    "text = \"The value is {:.3f}\"\n",
+    "print(text.format(p))\n",
+    "print(\"The value of P is {:.3f}\".format(p))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "08d0ed7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The First Name : DIGVIJAY and Last Name :MOHITE\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname='DIGVIJAY'\n",
+    "lname='MOHITE'\n",
+    "print(f'The First Name : {fname} and Last Name :{lname}'.format(fname,lname))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1d1aec14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I want 1 pieces of item no 10 with price of 100.00 \n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=10\n",
+    "c=100\n",
+    "\n",
+    "print(f\"I want {a} pieces of item no {b} with price of {c:.2f} \".format(a,b,c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "cf274f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "His name is DIGVIJAY and DIGVIJAY is 35 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "age=35\n",
+    "name='DIGVIJAY'\n",
+    "\n",
+    "txt=\"His name is {1} and {1} is {0} years old\"\n",
+    "\n",
+    "print(txt.format(age,name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "85baadf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I HAVE A TATA and model is SAFARI\n"
+     ]
+    }
+   ],
+   "source": [
+    "car='TATA'\n",
+    "model='SAFARI'\n",
+    "print('I HAVE A {Vehicle} and model is {MODEL}'.format(Vehicle=car,MODEL=model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "ed49b3b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File handling in Python involves various operations such as opening, reading, writing, and closing f\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open('demo.txt')\n",
+    "print(f.read(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "37fb1273",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File handling in Python involves various operations such as opening, reading, writing, and closing files. \n",
+      "\n",
+      "Here are some basic examples of file handling in Python:\n",
+      "\n",
+      "# Open a file in read mode > with open(\"example.txt\", \"r\") as file:\n",
+      "\n",
+      "# Read the entire content > content = file.read(print(content)\n",
+      "\n",
+      "Remember to handle file closure efficiently by using the with statement (context manager).\n",
+      "\n",
+      "It automatically takes care of closing the file when you are done, even if an exception occurs. \n",
+      "\n",
+      "Also, ensure that the file paths are correct and that you have the necessary permissions to perform the specified file operations.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open('demo.txt','r')\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())\n",
+    "print(f.readline())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "5430910f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remember to handle file closure efficiently by using the with statement (context manager). It automatically takes care of closing the file when you are done, even if an exception occurs. Also, ensure that the file paths are correct and that you have the necessary permissions to perform the specified file operations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open('demo.txt','r')\n",
+    "\n",
+    "for line in f:\n",
+    "    print(line)\n",
+    "    \n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "cd600bf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=open('demo.txt','w')\n",
+    "txt='Remember to handle file closure efficiently by using the with statement (context manager). It automatically takes care of closing the file when you are done, even if an exception occurs. Also, ensure that the file paths are correct and that you have the necessary permissions to perform the specified file operations.'\n",
+    "f.write(txt)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "8fff3041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=open('demo.txt','a')\n",
+    "txt='This is new string added'\n",
+    "f.write(txt)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "59a14c90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=open('demo3.txt','x')\n",
+    "txt='DIGVIJAY IS CS  SHJC  SCHSCJSCCH SJSCSCJSC C. ASDHDUDH DODHD . IDDHDJDDDDGDWD WEDW.DDWED.WD'\n",
+    "f.write(txt)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "cb032633",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DIGVIJAY IS CS  SHJC  SCHSCJSCCH SJSCSCJSC C. ASDHDUDH DODHD . IDDHDJDDDDGDWD WEDW.DDWED.WD\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open('demo2.txt','r')\n",
+    "for i in f:\n",
+    "    print(i)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3642b1b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is line 1\n",
+      "This is line 2\n",
+      "This is line 3\n",
+      "This is line 4\n",
+      "This is line 5\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "f=open('demo2.txt')\n",
+    "print(f.read())\n",
+    "f.close()\n",
+    "\n",
+    "os.remove('demo2.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7ace8d6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.remove('demo3.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "aaab078b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.mkdir('sample3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "41862146",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir('sample2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d88fd27c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir('sample3')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0d9347fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir('sample')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06bc31f7",
+   "id": "355ab71c",
    "metadata": {},
    "outputs": [],
    "source": []
