--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -3999,6 +3999,102 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aaad3013",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'A', 1.1), (2, 'B', 2.2), (3, 'C', 3.3), (4, 'D', 4.4), (5, 'E', 5.5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how to make zip by using list\n",
+    "\n",
+    "l1=[1,2,3,4,5]\n",
+    "l2=['A','B','C','D','E']\n",
+    "l3=[1.1,2.2,3.3,4.4,5.5]\n",
+    "\n",
+    "ziped_list = [(a,b,c) for (a,b,c) in zip(l1,l2,l3)]\n",
+    "print(ziped_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "db964590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# custom zip\n",
+    "\n",
+    "def custom_zip(l1,l2):\n",
+    "    return [(l1[i],l2[i]) for i in range(min(len(l1),len(l2)))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5cdb6ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'A'), (2, 'B'), (3, 'C'), (4, 'D'), (5, 'E')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custom_zip(l1,l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "35e70519",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'A', 2: 'B', 3: 'C', 4: 'D', 5: 'E'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Combine two lists into a dictionary using list comprehension\n",
+    "\n",
+    "l1=[1,2,3,4,5]\n",
+    "l2=['A','B','C','D','E']\n",
+    "\n",
+    "my_dict={l1: l2 for l1, l2 in zip(l1,l2)}\n",
+    "my_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2839b44b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bf8a8747",
    "metadata": {},
