--- a/Rough_book_for_practice.ipynb
+++ b/Rough_book_for_practice.ipynb
@@ -8689,8 +8689,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "355ab71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 'A', 2: 'B', 3: 'C', 4: 'D', 5: 'E'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys=[1,2,3,4,5]\n",
+    "values=['A','B','C','D','E']\n",
+    "\n",
+    "mt_dict=[{keys:values for keys, values in zip(keys,values)}]\n",
+    "mt_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1d5a136",
    "metadata": {},
    "outputs": [],
    "source": []
